--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
-    "mongoose": "^5.1.4"
+    "mongoose": "^5.1.4",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
