--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,8 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy":{
-    "/auth/google":{
+  "proxy": {
+    "/auth/google": {
       "target": "http://localhost:5000"
     }
   },
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
