--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "connected-react-router": "^4.3.0",
+    "history": "^4.7.2",
     "materialize-css": "^0.100.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
