--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,7 @@
       "target": "http://localhost:5000"
     }
   },
-  "devDependencies": {
-    "react-scripts": "1.1.4"
-  },
+  "devDependencies": {},
   "dependencies": {
     "axios": "^0.18.0",
     "connected-react-router": "^4.3.0",
@@ -21,6 +19,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "react-scripts": "1.1.4",
     "react-router-dom": "^4.3.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.0",
