--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,11 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
