--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {},
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
     "materialize-css": "^0.100.2",
